--- a/ImageClassification/ImageClassification.csproj
+++ b/ImageClassification/ImageClassification.csproj
@@ -12,6 +12,7 @@
     <AssemblyVersion>1.0.2.0</AssemblyVersion>
     <FileVersion>1.0.2.0</FileVersion>
     <Version>1.0.2</Version>
+    <PackageProjectUrl>https://github.com/teonsen/ImageClassification</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
