--- a/ImageClassification/ImageClassification.csproj
+++ b/ImageClassification/ImageClassification.csproj
@@ -7,20 +7,19 @@
     <Company>teonsen</Company>
     <Copyright>teonsen</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Description>A ML.NET wrapper for image classification.
-</Description>
+    <Description>A ML.NET wrapper for image classification.</Description>
     <RepositoryUrl>https://github.com/teonsen/ImageClassification</RepositoryUrl>
-    <AssemblyVersion>1.5.4.2</AssemblyVersion>
-    <FileVersion>1.5.4.2</FileVersion>
-    <Version>1.5.4.2</Version>
+    <AssemblyVersion>1.5.5.0</AssemblyVersion>
+    <FileVersion>1.5.5.0</FileVersion>
+    <Version>1.5.5.0</Version>
     <PackageProjectUrl>https://github.com/teonsen/ImageClassification</PackageProjectUrl>
-    <PackageTags>ML.NET image-classification webcam</PackageTags>
+    <PackageTags>ML.NET image-classification</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="1.5.4" />
-    <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.5.4" />
-    <PackageReference Include="Microsoft.ML.Vision" Version="1.5.4" />
+    <PackageReference Include="Microsoft.ML" Version="1.5.5" />
+    <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.5.5" />
+    <PackageReference Include="Microsoft.ML.Vision" Version="1.5.5" />
     <PackageReference Include="SciSharp.TensorFlow.Redist" Version="2.3.1" />
   </ItemGroup>
 
