--- a/ImageClassification/ImageClassification.csproj
+++ b/ImageClassification/ImageClassification.csproj
@@ -7,11 +7,11 @@
     <Company>teonsen</Company>
     <Copyright>teonsen</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Description>A ML.NET wrapper for image classification.</Description>
+    <Description>A ML.NET wrapper to ease image classification.</Description>
     <RepositoryUrl>https://github.com/teonsen/ImageClassification</RepositoryUrl>
-    <AssemblyVersion>1.5.5.0</AssemblyVersion>
-    <FileVersion>1.5.5.0</FileVersion>
-    <Version>1.5.5.0</Version>
+    <AssemblyVersion>1.5.5.1</AssemblyVersion>
+    <FileVersion>1.5.5.1</FileVersion>
+    <Version>1.5.5.1</Version>
     <PackageProjectUrl>https://github.com/teonsen/ImageClassification</PackageProjectUrl>
     <PackageTags>ML.NET image-classification</PackageTags>
   </PropertyGroup>
