--- a/ImageClassificationGPU/ImageClassificationGPU.csproj
+++ b/ImageClassificationGPU/ImageClassificationGPU.csproj
@@ -7,17 +7,17 @@
     <Company>teonsen</Company>
     <Product>ImageClassificationGPU</Product>
     <Copyright>teonsen</Copyright>
-    <Version>1.5.5.0</Version>
+    <Version>1.5.5.1</Version>
     <Authors>teonsen</Authors>
-    <Description>A ML.NET wrapper for image classification.</Description>
+    <Description>A ML.NET wrapper to ease image classification.</Description>
     <PackageProjectUrl>https://github.com/teonsen/ImageClassification</PackageProjectUrl>
     <RepositoryUrl>https://github.com/teonsen/ImageClassification</RepositoryUrl>
     <PackageTags>ML.NET image-classification</PackageTags>
     <PackageReleaseNotes>You need to meet following requirements.
 * CUDA 10.1 update2
 * cuDNN 7.6.5</PackageReleaseNotes>
-    <AssemblyVersion>1.5.5.0</AssemblyVersion>
-    <FileVersion>1.5.5.0</FileVersion>
+    <AssemblyVersion>1.5.5.1</AssemblyVersion>
+    <FileVersion>1.5.5.1</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
