--- a/ImageClassification/ImageClassification.csproj
+++ b/ImageClassification/ImageClassification.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net472</TargetFrameworks>
+    <TargetFrameworks>net6;net472</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>teonsen</Authors>
     <Company>teonsen</Company>
@@ -9,22 +9,26 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Description>A ML.NET wrapper to ease image classification.</Description>
     <RepositoryUrl>https://github.com/teonsen/ImageClassification</RepositoryUrl>
-    <AssemblyVersion>1.5.5.3</AssemblyVersion>
-    <FileVersion>1.5.5.3</FileVersion>
-    <Version>1.5.5.3</Version>
+    <AssemblyVersion>2.0.0.1</AssemblyVersion>
+    <FileVersion>2.0.0.1</FileVersion>
+    <Version>2.0.0.1</Version>
     <PackageProjectUrl>https://github.com/teonsen/ImageClassification</PackageProjectUrl>
     <PackageTags>ML.NET image-classification</PackageTags>
+    <PackageReleaseNotes>2.0.x comes with ML.NET 2.0.0.0 or later.
+Changed .NETCore3.1 to .NET6.0</PackageReleaseNotes>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="1.5.5" />
-    <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.5.5" />
-    <PackageReference Include="Microsoft.ML.Vision" Version="1.5.5" />
-    <PackageReference Include="SciSharp.TensorFlow.Redist" Version="2.3.1" />
+    <PackageReference Include="Microsoft.ML" Version="2.0.0" />
+    <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="2.0.0" />
+    <PackageReference Include="Microsoft.ML.Vision" Version="2.0.0" />
+    <PackageReference Include="SciSharp.TensorFlow.Redist" Version="2.10.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ImageClassification.IO\ImageClassification.IO.csproj" />
+    <None Include="doc\readme.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
